# diecast-catalogue

./: CMakeLists.txt  index.html  metadata.json  package.json  server.ts
.github/workflows/: build-executable.yml
src/: App.tsx  index.css  main.cpp  theme.cpp  theme.hpp  types.ts  utils.cpp  utils.hpp
src/components/: LeftPanel.tsx  MiddlePanel.tsx  RightPanel.tsx
src/core/: theme.cpp  theme.hpp  types.hpp  utils.cpp  utils.hpp
src/data/: cars.ts
src/utils/: fallbackHistory.ts  photoStorage.ts
